formatting actually fixed!

--- a/index.html
+++ b/index.html
@@ -309,25 +309,22 @@
         tempDiv.innerHTML = htmlContent;
         return tempDiv.textContent.replace(/\n/g, "\n\n");
       }
-
       function copyToClipboard() {
         const summaryDiv = document.getElementById("summary");
-        const textVersion = htmlToText(summaryDiv.innerHTML);
-        const textarea = document.createElement("textarea");
+        const range = document.createRange();
+        range.selectNode(summaryDiv);
+        const selection = window.getSelection();
+        selection.removeAllRanges();
+        selection.addRange(range);
 
-        // Find the index of the end of the first line
-        const firstLineEnd = textVersion.indexOf("\n");
-        // Extract the first line and the rest of the text separately
-        const firstLine = textVersion.substring(0, firstLineEnd).trim();
-        const restText = textVersion.substring(firstLineEnd).trim();
-
-        // Add markdown bold formatting to the first line
-        textarea.textContent = `<strong>${firstLine}</strong>\n\n${restText}`;
-        document.body.appendChild(textarea);
-        textarea.select();
-        document.execCommand("copy");
-        document.body.removeChild(textarea);
-        alert("Copied to clipboard");
+        try {
+          document.execCommand("copy");
+          alert("Copied to clipboard");
+        } catch (err) {
+          console.error("Unable to copy to clipboard:", err);
+        } finally {
+          selection.removeAllRanges();
+        }
       }
 
       // Automatically set current date & time when page loads
