comments and hero

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <option value="insomnia">Insomnia</option>
         <option value="bad insomnia">Bad Insomnia</option></select
       ><br />
-      Any dreams?
+      Any dreams or Sleep Comments?
       <select id="dreams" onchange="toggleDreamDesc()">
         <option value="no">No</option>
         <option value="yes">Yes</option>
@@ -86,7 +86,7 @@
         <option value="severe">Severe</option></select
       ><br />
 
-      Other ailments?
+      Comments/Other ailments?
       <input
         type="checkbox"
         id="otherAilment"
@@ -95,11 +95,12 @@
       <textarea
         id="otherAilmentDesc"
         class="hidden"
-        placeholder="Describe the ailment"
+        placeholder="Comment / or Describe the other ailment"
       ></textarea
       ><br />
       <br />
-      Whose got what you want out of life?
+      Whose got what you want out of life? (a Hero -or- someone you're jealous
+      of)
       <input type="text" id="jealousGoalPerson" /><br />
       What do they have that you don't?
       <input type="text" id="jealousGoal" /><br />
