--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         } lbs. <br>\n`;
 
         summary += `Sleep: ${document.getElementById("sleep").value}\n`;
-        summary += `Sleep duration: ${
+        summary += `-- Duration: ${
           document.getElementById("sleepHours").value
         } hours<br>\n`;
 
@@ -242,7 +242,7 @@
             document.getElementById("dreamDesc").value
           }\n`;
         }
-        summary += `<br>\n I learned   ${
+        summary += `<br>\n<br>\n I learned   ${
           document.getElementById("learned").value
         }<br>\n`;
         summary += `I'm excited about  ${
