got rid of the alert

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         el.select();
         document.execCommand("copy");
         document.body.removeChild(el);
-        alert("Copied to clipboard.");
+        //        alert("Copied to clipboard.");
       }
 
       // Automatically set current date & time when page loads
