--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
       <input type="text" id="sixDayPlan" /><br />
       <br />
       Action plan for today: <input type="text" id="todayPlan" /><br />
-      To assure <span id="actionTodayPlaceholder">that</span> happens today:
+      To assure <span id="actionTodayPlaceholder">that</span> happens today/and
+      other thougts/stream of consciousness:
       <input type="text" id="avoidTodayIssue" /><br />
       <br />
 
